Atualizando de Java 17 para Java 21