@@ -6,7 +6,7 @@ import java.util.Locale;
 
 public class FormatadorDeAbreviaturaDoMesAno {
 	public String format(YearMonth mesAno) {
-		String abreviaturaDoMesAno = mesAno.format(DateTimeFormatter.ofPattern("MMM-yyyy", new Locale("pt", "BR")));
+		String abreviaturaDoMesAno = mesAno.format(DateTimeFormatter.ofPattern("MMM-yyyy", Locale.of("pt", "BR")));
 		abreviaturaDoMesAno = abreviaturaDoMesAno.substring(0, 1).toUpperCase() + abreviaturaDoMesAno.substring(1);
 		abreviaturaDoMesAno = abreviaturaDoMesAno.replace(".", "");
 		return abreviaturaDoMesAno;
